[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/test_sprites/player_placeholder.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/environment/zones/gifs/drop_zone_h-2.png" type="Texture" id=2]
[ext_resource path="res://src/delivery/delivery_point.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[node name="DeliveryPoint" type="Node2D"]
pause_mode = 2
script = ExtResource( 3 )

[node name="DeliveryZone" type="Area2D" parent="."]
position = Vector2( 0, -48 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeliveryZone"]
position = Vector2( 0, 48 )
shape = SubResource( 1 )

[node name="DeliveryZoneSprite" type="Sprite" parent="DeliveryZone"]
modulate = Color( 0.145098, 0.984314, 0.160784, 0.462745 )
position = Vector2( -5.72205e-06, 48 )
texture = ExtResource( 2 )

[node name="NPC (Placeholder)" type="KinematicBody2D" parent="."]
position = Vector2( 0, -48 )

[node name="Sprite" type="Sprite" parent="NPC (Placeholder)"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC (Placeholder)"]
shape = SubResource( 2 )

[connection signal="body_entered" from="DeliveryZone" to="." method="_on_DeliveryZone_body_entered"]
[connection signal="body_exited" from="DeliveryZone" to="." method="_on_DeliveryZone_body_exited"]
